plugins {
    id 'java'
    id 'application'
}

group = 'is.yarr.qilletni.toolchain'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = '20'
//    targetCompatibility = '21'
}

application {
    mainClass = 'is.yarr.qilletni.toolchain.QilletniToolchainApplication'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'info.picocli:picocli:4.7.5'
    annotationProcessor 'info.picocli:picocli-codegen:4.7.5'
    
    implementation 'is.yarr.qilletni:Qilletni:1.0.0-SNAPSHOT'
    implementation 'is.yarr.qilletni:Qilletni:1.0.0-SNAPSHOT:sources'
    
    implementation 'is.yarr.qilletni.api:qilletni-api:1.0.0-SNAPSHOT'

    // Configs
    implementation 'org.yaml:snakeyaml:2.2'
    implementation 'com.google.code.gson:gson:2.10.1'

    // SLF4J API dependency
    implementation 'org.apache.logging.log4j:log4j-api:2.22.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.22.1'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}
